--- a/src/site/index.html
+++ b/src/site/index.html
@@ -23,7 +23,7 @@
         <title>PlayMe!</title>
     </head>
     <script type="module">
-        import init from "./target/playme.js";
+        import init from "./target/generated.js";
         init();
     </script>
 </html>
