--- a/src/site/index.html
+++ b/src/site/index.html
@@ -4,26 +4,190 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <style>
-            body {
-                background-color: black;
+        <style type="text/css">
+            body,
+            html,
+            div,
+            canvas {
                 padding: 0;
                 margin: 0;
-                width: 100%;
-                height: 100%;
+                outline: none;
+                border: none;
+            }
+            a {
+                text-decoration: underline;
+                color: #eeeeff;
+            }
+            body {
+                font-family: sans-serif;
+                background-color: #111144;
                 overflow: hidden;
             }
-            canvas {
-                margin: 0;
-                background-color: white;
-                outline: none;
+            #loading-screen {
+                color: white;
+                z-index: 99;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+            }
+
+            /* --  HELPERS -- */
+
+            .absolute-fill {
+                position: absolute;
+                top: 0;
+                left: 0;
+                bottom: 0;
+                right: 0;
+            }
+            .fade-out {
+                opacity: 0%;
+                transition: opacity ease-in 1s;
+            }
+
+            /* - ANIMATIONS - */
+
+            /*
+                YUMMYYY
+                Thanks https://www.gradient-animator.com/
+                By him a coffee https://buymeacoffee.com/ianforrest
+            */
+            .gradient-back {
+                background: linear-gradient(341deg, #3e7cab, #863eab);
+                background-size: 400% 400%;
+                -webkit-animation: LoadingBackgroundAnim 2s ease infinite;
+                -moz-animation: LoadingBackgroundAnim 2s ease infinite;
+                animation: LoadingBackgroundAnim 2s ease infinite;
+            }
+            @keyframes LoadingBackgroundAnim {
+                0% {
+                    background-position: 0% 37%;
+                }
+                50% {
+                    background-position: 100% 64%;
+                }
+                100% {
+                    background-position: 0% 37%;
+                }
+            }
+            /* Loader from https://css-loaders.com/3d/ */
+            .loader {
+                --s: 3em;
+                margin: auto;
+                --_d: calc(0.353 * var(--s));
+                width: calc(var(--s) + var(--_d));
+                aspect-ratio: 1;
+                display: grid;
+            }
+            .loader:before,
+            .loader:after {
+                content: "";
+                clip-path: polygon(
+                    var(--_d) 0,
+                    100% 0,
+                    100% calc(100% - var(--_d)),
+                    calc(100% - var(--_d)) 100%,
+                    0 100%,
+                    0 var(--_d)
+                );
+                background: conic-gradient(
+                    from -90deg at var(--s) var(--_d),
+                    #fff 135deg,
+                    #666 0 270deg,
+                    #aaa 0
+                );
+                animation: l4 1.2s infinite;
+            }
+            .loader:before {
+                z-index: 1;
+                margin-bottom: calc(var(--_d) / -2 - 1px);
+            }
+            .loader:after {
+                margin-top: calc(var(--_d) / -2 - 1px);
+                animation-delay: 0.6s;
+            }
+            @keyframes l4 {
+                0% {
+                    transform: translate(0);
+                }
+                16.67% {
+                    transform: translate(-10px);
+                }
+                33.33% {
+                    transform: translate(10px);
+                }
+                50%,
+                100% {
+                    transform: translate(0);
+                }
             }
         </style>
 
         <title>PlayMe!</title>
     </head>
-    <script type="module">
-        import init from "./target/generated.js";
-        init();
-    </script>
+    <body>
+        <!-- Hidden by default -->
+        <div
+            id="loading-screen"
+            class="absolute-fill gradient-back"
+            style="display: none"
+        >
+            <div id="loading-inner">
+                <div class="loader"></div>
+                <p>Made by <a href="https://cjburkey.com">CJ</a>!</p>
+            </div>
+        </div>
+        <div id="container" class="absolute-fill">
+            <noscript>
+                <h1>JavaScript not enabled!</h1>
+                <p>This game requires JavaScript to function!</p>
+            </noscript>
+            <!--
+                Canvas doesn't have style="display:none" here because it
+                wouldn't end up showing the canvas support error :shrug:
+                Handled in `show_progress_screen()`
+            -->
+            <canvas id="main-canvas">
+                <h1>Failed to load canvas!</h1>
+                <p>Your browser lacks support for the HTML5 canvas element!</p>
+                <p>Do you have JavaScript disabled?</p>
+            </canvas>
+        </div>
+        <script>
+            const set_disp = (elem, val) => {
+                if (elem?.style) elem.style.display = val;
+            };
+            const disp_elem = (name, val) =>
+                set_disp(document.getElementById(name), val);
+
+            // Display loading screen
+            function show_progress_screen() {
+                console.log(
+                    "Show loading screen and hide canvas while loading",
+                );
+                disp_elem("loading-screen", "flex");
+                disp_elem("main-canvas", "none");
+            }
+            function hide_progress_screen() {
+                console.log("Hide loading screen, show canvas");
+                document
+                    .getElementById("loading-screen")
+                    ?.classList.add("fade-out");
+                disp_elem("main-canvas", "block");
+            }
+
+            window.addEventListener("load", show_progress_screen);
+            window.addEventListener("transitionend", ({ target }) => {
+                if (target.classList.contains("fade-out")) {
+                    target.classList.remove("fade-out");
+                    set_disp(target, "none");
+                }
+            });
+        </script>
+        <!-- Download WASM binary & run -->
+        <script type="module">
+            import init from "./target/generated.js";
+            init();
+        </script>
+    </body>
 </html>
